fixed spacing on city select

--- a/src/client/scss/_rows.scss
+++ b/src/client/scss/_rows.scss
@@ -89,6 +89,7 @@
       background: white;
       color: $primary-text-dark;
       height: 3rem;
+      margin: auto;
       width: 60%;
     }
 
